--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-tree-view": "^7.14.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.6",
