--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@mui/x-tree-view": "^7.14.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "framer-motion": "^12.15.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
